--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Odisea</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Servicios</a></li>
+                <li><a href="#">Productos</a></li>
+                <li><a href="#">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section>
+        <h2>Productos</h2>
+    </section>
+    <section>
+        <h2>Servicios</h2>
+    </section>
+    <section>
+        <h2>Contacto</h2>
+    </section>
+    <footer>
+        <p>Odisea 2022</p>
+    </footer>
 </body>
 </html>
