--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
@@ -18,6 +19,26 @@
             </ul>
         </nav>
     </header>
+<!-- Carrusel -->
+
+<div class="contenedor">
+
+    <div class="atras botones">
+        &#60
+    </div>
+
+    <div class="atras botones">
+        &#62
+    </div>
+
+    <img src="imagenes/01.jpg" alt="">
+</div>
+
+
+<!-- finCarrusel -->
+
+
+
     <section>
         <h2>Productos</h2>
     </section>
@@ -30,5 +51,7 @@
     <footer>
         <p>Odisea 2022</p>
     </footer>
+
+    <script src="js/main.js"></script>
 </body>
 </html>
