--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         &#60
     </div>
 
-    <div class="atras botones">
+    <div class="adelante botones">
         &#62
     </div>
 
-    <img src="imagenes/01.jpg" alt="">
+    <img src="img/01.jpg" alt="">
 </div>
 
 
