--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -37,8 +40,8 @@
 
 <!-- finCarrusel -->
 
-    <section>
-        <h2>Productos</h2>
+    <section class="productos contenedor_prod">
+        <h2 class="prod">Productos</h2>
     </section>
     <section>
         <h2>Servicios</h2>
