--- a/index.html
+++ b/index.html
@@ -39,9 +39,21 @@
 
 
 <!-- finCarrusel -->
-
+<h2 class="prod">Productos</h2>
     <section class="productos contenedor_prod">
-        <h2 class="prod">Productos</h2>
+        
+        <div class="produc prod_1">
+
+        </div>
+        <div class="produc prod_2">
+
+        </div>
+        <div class="produc prod_3">
+
+        </div>
+        <div class="produc prod_4">
+
+        </div>
     </section>
     <section>
         <h2>Servicios</h2>
