--- a/index.html
+++ b/index.html
@@ -54,6 +54,20 @@
         <div class="produc prod_4">
 
         </div>
+
+        <div class="produc prod_5">
+
+        </div>
+        <div class="produc prod_6">
+
+        </div>
+        <div class="produc prod_7">
+
+        </div>
+        <div class="produc prod_8">
+
+        </div>
+
     </section>
     <section>
         <h2>Servicios</h2>
