--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
         </div>
 
     </section>
-    <section>
-        <h2>Servicios</h2>
+        <h2 class="serv">Servicios</h2>
+    <section class="servicios">
     </section>
     <section>
         <h2>Contacto</h2>
