--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://kit.fontawesome.com/2a5ed24733.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet"> 
-<script src="https://kit.fontawesome.com/6c1c9a2cc3.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
@@ -70,8 +70,29 @@
         </div>
 
     </section>
+
+
         <h2 class="serv">Servicios</h2>
     <section class="servicios">
+        <div class="servi serv_uno">
+            <i class="fa-solid fa-computer"></i>
+        </div>
+        <div class="servi serv_dos">
+            <i class="fa-solid fa-computer"></i>
+        </div>
+        <div class="servi serv_tres">
+            <i class="fa-solid fa-computer"></i>
+        </div>
+        <div class="servi serv_cuatro">
+            <i class="fa-solid fa-computer"></i>
+        </div>
+        <div class="servi serv_cinco">
+            <i class="fa-solid fa-computer"></i>
+        </div>
+        <div class="servi serv_seis">
+            <i class="fa-solid fa-computer"></i>
+        </div>
+     
     </section>
     <section>
         <h2>Contacto</h2>
@@ -81,5 +102,6 @@
     </footer>
 
     <script src="js/main.js"></script>
+
 </body>
 </html>
