estableciendo medidas de servicios

--- a/index.html
+++ b/index.html
@@ -76,21 +76,33 @@
     <section class="servicios">
         <div class="servi serv_uno">
             <i class="fa-solid fa-computer"></i>
+            <h6>Software</h6>
+            <p class="description">Instalación y actualización de Software</p>
         </div>
         <div class="servi serv_dos">
             <i class="fa-solid fa-computer"></i>
+            <h6>Software</h6>
+            <p class="description">Instalación y actualización de Software</p>
         </div>
         <div class="servi serv_tres">
             <i class="fa-solid fa-computer"></i>
+            <h6>Software</h6>
+            <p class="description">Instalación y actualización de Software</p>
         </div>
         <div class="servi serv_cuatro">
             <i class="fa-solid fa-computer"></i>
+            <h6>Software</h6>
+            <p class="description">Instalación y actualización de Software</p>
         </div>
         <div class="servi serv_cinco">
             <i class="fa-solid fa-computer"></i>
+            <h6>Software</h6>
+            <p class="description">Instalación y actualización de Software</p>
         </div>
         <div class="servi serv_seis">
             <i class="fa-solid fa-computer"></i>
+            <h6>Software</h6>
+            <p class="description">Instalación y actualización de Software</p>
         </div>
      
     </section>
