--- a/index.html
+++ b/index.html
@@ -107,8 +107,27 @@
      
     </section>
     <section>
-        <h2>Contacto</h2>
+        <h2 class="cont">Contacto</h2>
     </section>
+
+    <!-- Formulario -->
+
+    <section class="fondo_formulario">   
+        <form class="form">
+            <div class="form__container">
+                <h2 class="form__title">Contáctame</h2>
+                <input type="text" class="form__input" placeholder="Nombre">
+                <input type="email" class="form__input" placeholder="Email">
+                <textarea class="form__input form__input--message" placeholder="Mensaje:""></textarea>
+                <input type="submit" value="Enviar" class="form__cta">
+            </div>
+        </form>
+
+    </section>
+
+
+
+    <!-- Fin de formulario -->
     <footer>
         <p>Odisea 2022</p>
     </footer>
