--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
 
 
     <!-- Fin de formulario -->
-    <footer>
-        <p>Odisea 2022</p>
+    <footer  class="foot">
+        <p class="infofot">Odisea 2022</p>
     </footer>
 
     <script src="js/main.js"></script>
